--- a/contato.html
+++ b/contato.html
@@ -18,31 +18,30 @@
         <div>
             <form>
                 <label for="nome">Nome:</label><br>
-                <input type="text" id="nome">
-                <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
+                <input type="text" id="nome" onkeyup="validaNome()">
+                <div id="txtNome"></div>
                 <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
                 <label for="email">E-mail:</label><br>
-                <input type="email" id="email">
-                <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
+                <input type="email" id="email" onkeyup="validaEmail()">
+                <div id="txtEmail"></div>
                 <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
                 <label for="assunto">Assunto:</label><br>
-                <input type="text" id="assunto">
+                <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+                <div id="txtAssunto"></div>            
                 <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
                 <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
-                <label for="mensagem">Mensagem:</label><br>
-                <textarea name="mensagem" id="mensagem" cols="60" rows="5"></textarea>
-                <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
-                <br> <!-- Não é uma boa prática utilizar tag de pular linha -->
-                <button>Enviar</button>
+                <button onclick="enviar()">Enviar</button>
+                <!-- onclick - executa uma função quando o cursor clicar no botão -->
             </form>        
         </div>
 
-        <div class="ml-50">
+        <div class="ml-50 mb-50">
             <p>Carmen está em algum lugar no mundo...</p>
-
+            
             <p>San Diego, Califórnia (?)</p>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d429154.75849390216!2d-117.38917710046434!3d32.82481751258842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9530fad921e4b%3A0xd3a21fdfd15df79!2sSan%20Diego%2C%20CA%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1603301750175!5m2!1spt-BR!2sbr" width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <!-- onmousemove - executa uma função quando o mouse estiver em cima do elemento -->
+            <!-- onmouseout - executa outra função quando o mouse sair de cima do elemento -->
+            <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d429154.75849390216!2d-117.38917710046434!3d32.82481751258842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9530fad921e4b%3A0xd3a21fdfd15df79!2sSan%20Diego%2C%20CA%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1603301750175!5m2!1spt-BR!2sbr" width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" onmousemove="mapaZoom()" onmouseout="mapaNormal()"></iframe>
         </div>
     </div>
 
@@ -65,5 +64,8 @@
             Todos os direitos reservados - Gabriela Gomes &copy;
         </p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
+    
 </body>
 </html>
